--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1410,11 +1410,11 @@ hr {
     bottom: 0;
     width: 100%;
     height: 101%;
-    background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ }
 
 .single-project .main-container {
@@ -1633,18 +1633,15 @@ hr {
     opacity: 1;
     transform: initial; } }
 .project h2 {
-  margin-bottom: 40px;
+  margin-bottom: 5px;
   margin-top: 40px;
   text-transform: uppercase;
   font-weight: 500;
-  font-family: 'Roboto', serif;
   font-size: 1em;
   display: inline-block;
   width: initial;
   font-weight: 600;
-  padding-bottom: 5px;
-  text-transform: uppercase;
-  letter-spacing: 2px; }
+  text-transform: uppercase; }
 
 .photonic-loading {
   display: none !important; }
